--- a/css/detail.css
+++ b/css/detail.css
@@ -606,6 +606,12 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .mode-switch > label > span {
+    font-size: 1.125rem;
+  }
+}
+
 .mode-switch > label > span:nth-child(2) {
   color: var(--dark-blue);
 }
@@ -706,6 +712,12 @@ body[data-theme="dark"] .top-btn {
   opacity: 0;
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro {
+    height: 100%;
+  }
+}
+
 .intro > h1 {
   display: flex;
   flex-direction: row;
@@ -744,6 +756,14 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro > h1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    font-size: 0.938rem;
+  }
+}
+
 .intro .profile {
   display: grid;
   grid-auto-flow: row;
@@ -777,6 +797,13 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .profile {
+    grid-column: 1/3;
+    grid-row: 2/7;
+  }
+}
+
 .intro .profile > img {
   width: auto;
   height: 100%;
@@ -785,6 +812,14 @@ body[data-theme="dark"] .top-btn {
 @media (max-width: 480px) {
   .intro .profile > img {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .profile > img {
+    width: 100%;
+    object-fit: cover;
+    object-position: left;
   }
 }
 
@@ -826,6 +861,13 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .purpose, .intro .timeline, .intro .team, .intro .member, .intro .contact, .intro .mode, .intro .tag {
+    grid-column: 3/6;
+    grid-row: 1/4;
+  }
+}
+
 .intro .purpose > h2, .intro .timeline > h2, .intro .team > h2, .intro .member > h2, .intro .contact > h2, .intro .mode > h2, .intro .tag > h2 {
   font-size: 2.25rem;
   margin-bottom: 0.75rem;
@@ -834,6 +876,13 @@ body[data-theme="dark"] .top-btn {
 @media (max-width: 1200px) {
   .intro .purpose > h2, .intro .timeline > h2, .intro .team > h2, .intro .member > h2, .intro .contact > h2, .intro .mode > h2, .intro .tag > h2 {
     font-size: 1.375rem;
+  }
+}
+
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .purpose > h2, .intro .timeline > h2, .intro .team > h2, .intro .member > h2, .intro .contact > h2, .intro .mode > h2, .intro .tag > h2 {
+    font-size: 1.125rem;
+    margin-bottom: 0.25rem;
   }
 }
 
@@ -852,6 +901,14 @@ body[data-theme="dark"] .top-btn {
   .intro .purpose .des, .intro .timeline .des, .intro .team .des, .intro .member .des, .intro .contact .des, .intro .mode .des, .intro .tag .des {
     font-size: 0.875rem;
     gap: 0.375rem;
+  }
+}
+
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .purpose .des, .intro .timeline .des, .intro .team .des, .intro .member .des, .intro .contact .des, .intro .mode .des, .intro .tag .des {
+    font-size: 0.75rem;
+    gap: 0.375px;
+    line-height: 1rem;
   }
 }
 
@@ -888,6 +945,13 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .timeline {
+    grid-column: 6/10;
+    grid-row: 1/4;
+  }
+}
+
 .intro .team {
   grid-column: 6/8;
   grid-row: 4/6;
@@ -921,6 +985,13 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .team {
+    grid-column: 10/13;
+    grid-row: 4/6;
+  }
+}
+
 .intro .member {
   grid-column: 8/11;
   grid-row: 4/6;
@@ -951,6 +1022,13 @@ body[data-theme="dark"] .top-btn {
   .intro .member {
     grid-column: 6/13;
     grid-row: 6/7;
+  }
+}
+
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .member {
+    grid-column: 10/13;
+    grid-row: 1/4;
   }
 }
 
@@ -989,9 +1067,22 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .contact {
+    grid-column: 3/7;
+    grid-row: 4/6;
+  }
+}
+
 @media (max-width: 1200px) {
   .intro .contact .item {
     font-size: 0.875rem;
+  }
+}
+
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .contact .item {
+    font-size: 0.75rem;
   }
 }
 
@@ -1003,6 +1094,12 @@ body[data-theme="dark"] .top-btn {
 @media (max-width: 1200px) {
   .intro .contact .item > h2 {
     font-size: 1.375rem;
+  }
+}
+
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .contact .item > h2 {
+    font-size: 1.125rem;
   }
 }
 
@@ -1041,6 +1138,13 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .mode {
+    grid-column: 10/13;
+    grid-row: 6/7;
+  }
+}
+
 .intro .tag {
   grid-column: 11/13;
   grid-row: 4/6;
@@ -1068,9 +1172,22 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .tag {
+    grid-column: 7/10;
+    grid-row: 4/7;
+  }
+}
+
 @media (max-width: 768px) {
   .intro .tag .des {
     grid-auto-flow: column;
+  }
+}
+
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .tag .des {
+    grid-auto-flow: row;
   }
 }
 
@@ -1107,6 +1224,13 @@ body[data-theme="dark"] .top-btn {
   }
 }
 
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .click-back {
+    grid-column: 3/7;
+    grid-row: 6/7;
+  }
+}
+
 .intro .click-back::before {
   position: absolute;
   content: "";
@@ -1130,6 +1254,12 @@ body[data-theme="dark"] .top-btn {
   color: var(--black);
   mix-blend-mode: overlay;
   transition: all 0.2s ease;
+}
+
+@media only screen and (max-width: 991px) and (orientation: landscape) {
+  .intro .click-back .text {
+    font-size: 1.125rem;
+  }
 }
 
 .intro .click-back:hover::before {
