--- a/scss/layout/_intro.scss
+++ b/scss/layout/_intro.scss
@@ -1,4 +1,8 @@
 .intro {
+    @include for-iphone-landscape {
+        height: 100%;
+    }
+
     &>h1 {
         @include flexbox(row, center, center);
         @include grid-child(1, 6, 1, 2);
@@ -16,9 +20,14 @@
             @include grid-child(1, 5, 1, 2);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(1, 13, 1, 2);
             font-size: 1.5rem;
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(1, 3, 1, 2);
+            font-size: 0.938rem;
         }
     }
 
@@ -35,16 +44,26 @@
             @include grid-child(1, 5, 2, 5);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(1, 13, 2, 3);
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(1, 3, 2, 7);
         }
 
         &>img {
             width: auto;
             height: 100%;
 
-            @include for-iphone{
+            @include for-iphone {
                 width: 100%;
+            }
+
+            @include for-iphone-landscape {
+                width: 100%;
+                object-fit: cover;
+                object-position: left;
             }
         }
     }
@@ -66,8 +85,12 @@
             @include grid-child(5, 9, 3, 5);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(1, 13, 3, 5);
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(3, 6, 1, 4);
         }
 
         &>h2 {
@@ -76,6 +99,11 @@
 
             @include for-ipad-air {
                 font-size: 1.375rem;
+            }
+
+            @include for-iphone-landscape {
+                font-size: 1.125rem;
+                margin-bottom: 0.25rem;
             }
         }
 
@@ -92,6 +120,12 @@
             @include for-ipad-air {
                 font-size: 0.875rem;
                 gap: 0.375rem;
+            }
+
+            @include for-iphone-landscape {
+                font-size: 0.75rem;
+                gap: 0.375px;
+                line-height: 1rem;
             }
         }
     }
@@ -112,8 +146,12 @@
             @include grid-child(8, 13, 1, 3);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(1, 13, 5, 6);
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(6, 10, 1, 4);
         }
 
     }
@@ -134,8 +172,12 @@
             @include grid-child(5, 8, 1, 3);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(1, 6, 6, 7);
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(10, 13, 4, 6);
         }
     }
 
@@ -155,8 +197,12 @@
             @include grid-child(9, 13, 3, 5);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(6, 13, 6, 7);
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(10, 13, 1, 4);
         }
     }
 
@@ -177,14 +223,22 @@
             @include grid-child(1, 7, 6, 7);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(1, 13, 8, 9);
             height: 200px;
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(3, 7, 4, 6);
         }
 
         .item {
             @include for-ipad-air {
                 font-size: 0.875rem;
+            }
+
+            @include for-iphone-landscape {
+                font-size: 0.75rem;
             }
 
             &>h2 {
@@ -193,6 +247,10 @@
 
                 @include for-ipad-air {
                     font-size: 1.375rem;
+                }
+
+                @include for-iphone-landscape {
+                    font-size: 1.125rem;
                 }
             }
 
@@ -215,8 +273,12 @@
             @include grid-child(7, 13, 5, 6);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(1, 7, 9, 10);
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(10, 13, 6, 7);
         }
     }
 
@@ -233,13 +295,21 @@
             @include grid-child(1, 7, 5, 6);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(1, 13, 7, 8);
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(7, 10, 4, 7);
         }
 
         .des {
             @include for-ipad-min-landscape {
                 grid-auto-flow: column;
+            }
+
+            @include for-iphone-landscape {
+                grid-auto-flow: row;
             }
         }
     }
@@ -259,9 +329,13 @@
             @include grid-child(7, 13, 6, 7);
         }
 
-        @include for-iphone{
+        @include for-iphone {
             @include grid-child(7, 13, 9, 10);
             height: 100px;
+        }
+
+        @include for-iphone-landscape {
+            @include grid-child(3, 7, 6, 7);
         }
 
         &::before {
@@ -281,6 +355,10 @@
             color: var(--black);
             mix-blend-mode: overlay;
             @include ease(.2s);
+
+            @include for-iphone-landscape {
+                font-size: 1.125rem;
+            }
         }
 
         &:hover {
